--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         
     </div>
     <footer>
-        <p>@Shamim Basha 2023. ALL RIGHTS RESERVED.</p>
+        <p>© Shamim Basha 2023. ALL RIGHTS RESERVED.</p>
     </footer>
 </body>
 </html>
