--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="">Resume</a></li>
+                <li><a download="shamim-cv" href="assets/shamim cv.pdf">Resume</a></li>
             </ul>
             <button><a href="#contact">Let's Talk</a></button>
         </div>
