--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                 <div style="flex-basis: 50%;" class="right tools-list">
                     
                     <div class="">
-                        <h2 class="anim-bottom">Programming Languages :</h2>
+                        <h2 class="anim-bottom">Programming Languages </h2>
                         <ul>
                             <li class="anim-left">Python</li>
                             <li class="anim-left">JavaScript</li>
@@ -184,7 +184,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                     </div>
 
                     <div class="sec">
-                        <h2 class="anim-bottom">Web Development :</h2>
+                        <h2 class="anim-bottom">Web Development </h2>
                         <ul>
                             <li class="anim-left">HTML</li>
                             <li class="anim-left">CSS</li>
@@ -194,7 +194,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                     </div>
 
                     <div class="sec">
-                        <h2 class="anim-bottom">Web Frameworks/Libraries :</h2>
+                        <h2 class="anim-bottom">Web Frameworks/Libraries </h2>
                         <ul>
                             <li class="anim-left">React.Js</li>
                             <li class="anim-left">Django</li>
@@ -203,7 +203,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                     </div>
 
                     <div class="sec">
-                        <h2 class="anim-bottom">Mobile Development :</h2>
+                        <h2 class="anim-bottom">Mobile Development </h2>
                         <ul>
                             <li class="anim-left">React-Native</li>
                             <li class="anim-left">Expo</li>
