--- a/index.html
+++ b/index.html
@@ -21,18 +21,6 @@
         </div>
     </div>
 
-    <div class="ham-items">
-        <div class="ham-list">
-            <div class="close" style="cursor: pointer; "><i class="fa-solid fa-xmark"></i></div>
-            <ul>
-                <li class="ham-li"><a href="#home">Home</a></li>
-                <li class="ham-li"><a href="#about">About</a></li>
-                <li class="ham-li"><a href="#projects">Projects</a></li>
-                <li class="ham-li"><a download="shamim-cv" href="assets/shamim cv.pdf">Resume</a></li>
-                <li class="ham-li"><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </div>
 
     <nav>
         <div class="logo"><a href="#home"><svg class="logo-img" version="1.0" xmlns="http://www.w3.org/2000/svg"
@@ -132,7 +120,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
 </g>
 </svg>
 </a></div>
-        <div class="nav">
+        <div class="nav hide">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -142,6 +130,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
             <button><a href="#contact">Let's Talk</a></button>
         </div>
         <div class="ham-menu"><i class="fa-solid fa-bars ham"></i></div>
+        <div class="close" style="cursor: pointer; "><i class="fa-solid fa-xmark"></i></div>
     </nav>
     <div class="main-container">
         <section id="home" class="hero light">
