added some new technologies in digital tools

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                             <li class="anim-left">HTML</li>
                             <li class="anim-left">CSS</li>
                             <li class="anim-left">JavaScript</li>
+                            <li class="anim-left">Node.Js</li>
+                            <li class="anim-left">Express.Js</li>
                             <li class="anim-left">Bootstrap</li>
                         </ul>
                     </div>
@@ -186,6 +188,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                         <h2 class="anim-bottom">Web Frameworks/Libraries </h2>
                         <ul>
                             <li class="anim-left">React.Js</li>
+                            <li class="anim-left">Angular.Js</li>
                             <li class="anim-left">Django</li>
                             <li class="anim-left">Flask</li>
                         </ul>
