projects are now added from js using objects and only 5 project shows at first and have to click a button to show more

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
         </section>
         <section id="projects" class="projects dark">
             <h2 class="anim-bottom">Projects</h2>
-            <div style="display: flex; gap: 1em; flex-direction: column;">
-                <div class="project flex sm anim-bottom" style="align-items: flex-start;">
+            <div class="projectsContainer" style="display: flex; gap: 1em; flex-direction: column;">
+                <!-- <div class="project flex sm anim-bottom" style="align-items: flex-start;">
                     <div class="project-image"><img src="assets/path-finder.png" alt=""></div>
                     <div class="project-desc">
                         <div class="project-title"><h2><a target="_blank" href="https://github.com/Shamim-Basha/path_searching_visualizer">Path Finding Visualizer</a></h2></div>
@@ -302,7 +302,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                             <div class="tech">Expo</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <section id="contact" class="contact light">
