--- a/index.html
+++ b/index.html
@@ -167,29 +167,39 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                             <li class="anim-left">JavaScript</li>
                             <li class="anim-left">C</li>
                             <li class="anim-left">C++</li>
-                            <li class="anim-left">SQL</li>
                         </ul>
                     </div>
 
                     <div class="sec">
-                        <h2 class="anim-bottom">Web Development </h2>
+                        <h2 class="anim-bottom">Frontend Development </h2>
                         <ul>
                             <li class="anim-left">HTML</li>
                             <li class="anim-left">CSS</li>
                             <li class="anim-left">JavaScript</li>
-                            <li class="anim-left">Node.Js</li>
-                            <li class="anim-left">Express.Js</li>
+                            <li class="anim-left">React.Js</li>
+                            <li class="anim-left">Angular.Js</li>
                             <li class="anim-left">Bootstrap</li>
+                            <li class="anim-left">Tailwind</li>
                         </ul>
                     </div>
 
                     <div class="sec">
-                        <h2 class="anim-bottom">Web Frameworks/Libraries </h2>
+                        <h2 class="anim-bottom">Backend Development</h2>
                         <ul>
-                            <li class="anim-left">React.Js</li>
-                            <li class="anim-left">Angular.Js</li>
+                            <li class="anim-left">Node.Js</li>
+                            <li class="anim-left">Express.Js</li>
                             <li class="anim-left">Django</li>
                             <li class="anim-left">Flask</li>
+                        </ul>
+                    </div>
+
+                    <div class="sec">
+                        <h2 class="anim-bottom">Databsse</h2>
+                        <ul>
+                            <li class="anim-left">SQL</li>
+                            <li class="anim-left">MongoDB</li>
+                            <li class="anim-left">Sqlite</li>
+                            <li class="anim-left">Firebase</li>
                         </ul>
                     </div>
 
@@ -207,101 +217,16 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
             <h2 class="anim-bottom">Projects</h2>
             <div class="projectsContainer" style="display: flex; gap: 1em; flex-direction: column;">
                 <!-- <div class="project flex sm anim-bottom" style="align-items: flex-start;">
-                    <div class="project-image"><img src="assets/path-finder.png" alt=""></div>
+                    <div class="project-image"><img src="assets/image.png" alt=""></div>
                     <div class="project-desc">
-                        <div class="project-title"><h2><a target="_blank" href="https://github.com/Shamim-Basha/path_searching_visualizer">Path Finding Visualizer</a></h2></div>
-                        <p>I developed a Python-based Path Searching Visualizer using the Pygame library, which enables users to explore and visualize pathfinding algorithms such as BFS, DFS, Greedy Best-First Search, and A* Search.</p>
+                        <div class="project-title"><h2><a target="_blank" href="https://github.com/Shamim-Basha/project">Project name</a></h2></div>
+                        <p>project description</p>
                         <div class="technologies">
-                            <div class="tech">Python</div>
-                            <div class="tech">Pygame</div>
+                            <div class="tech">tech used 1</div>
+                            <div class="tech">tech used 2</div>
                         </div>
                     </div>
-                </div>
-                <div class="project flex sm anim-bottom" style="align-items: flex-start;">
-                    <div class="project-image"><img src="assets/kanban-board.png" alt=""></div>
-                    <div class="project-desc">
-                        <div class="project-title">
-                            <h2>
-                                <a target="_blank" href="https://github.com/Shamim-Basha/kanban-board">Kanban Board - Web App</a>
-                                <a class="ex-a" href="https://shamim-basha.github.io/kanban-board/"><i class="fa-solid fa-arrow-up-right-from-square external-link" style="padding-left: .5rem;"></i></a>
-
-                            </h2>
-                        </div>
-                        <p>I created a web-based Kanban Board application, leveraging local storage to provide users with a flexible and efficient task management solution with drag and drop feature.</p>
-                        <div class="technologies">
-                            <div class="tech">HTML</div>
-                            <div class="tech">CSS</div>
-                            <div class="tech">JavaScript</div>
-                            <div class="tech">Local Storage</div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="project flex sm anim-bottom" style="align-items: flex-start;">
-                    <div class="project-image"><img src="assets/movie-browser-1.png" alt=""><img src="assets/movie-browser-2.png" alt=""></div>
-                    <div class="project-desc">
-                        <div class="project-title"><h2><a target="_blank" href="https://github.com/Shamim-Basha/rn-movie-browser">Movie Browser - Mobile App</a></h2></div>
-                        <p>I designed and developed a mobile app using React Native that offers a seamless movie browsing experience. This app provides users with the ability to explore a vast collection of movies, view detailed information.</p>
-                        <div class="technologies">
-                            <div class="tech">React-Native</div>
-                            <div class="tech">Expo</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project flex sm anim-bottom" style="align-items: flex-start;">
-                    <div class="project-image"><img src="assets/study-buddy.png" alt=""></div>
-                    <div class="project-desc">
-                        <div class="project-title"><h2><a target="_blank" href="https://github.com/me50/Shamim-Basha/tree/cs50/problems/2023/x/project">Study Buddy</a></h2></div>
-                        <p>Developed a web app to help students to organize all their works in the same place and secure with username and password.Where user can add todos, notes, flash-cards, pomodoro-timer and forum to help each other.</p>
-                        <div class="technologies">
-                            <div class="tech">HTML</div>
-                            <div class="tech">CSS</div>
-                            <div class="tech">Python</div>
-                            <div class="tech">Flask</div>
-                            <div class="tech">Bootstrap</div>
-                            <div class="tech">SQL</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project flex sm anim-bottom" style="align-items: flex-start;">
-                    <div class="project-image"><img src="assets/tic-tac-toe.png" alt=""></div>
-                    <div class="project-desc">
-                        <div class="project-title"><h2><a target="_blank" href="https://github.com/Shamim-Basha/Tic-Tac-Toe-AI">Tic-Tac-Toe AI</a></h2></div>
-                        <p>Engineered a captivating Tic-Tac-Toe application using Python and Pygame, fusing a classic game with advanced AI powered by the Minimax algorithm. The application engages players in a strategic battle, providing an interactive Pygame interface for gameplay.</p>
-                        <div class="technologies">
-                            <div class="tech">Python</div>
-                            <div class="tech">Pygame</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project flex sm anim-bottom" style="align-items: flex-start;">
-                    <div class="project-image"><img src="assets/e-commerce.png" alt=""></div>
-                    <div class="project-desc">
-                        <div class="project-title"><h2><a target="_blank" href="https://github.com/me50/Shamim-Basha/tree/web50/projects/2020/x/commerce">E-Commerce - Web App</a></h2></div>
-                        <p>"Designed and developed an e-commerce auction site, enabling users to create listings, place bids, and manage their watchlist. Seamlessly implemented features such as category navigation and a user-friendly admin interface for easy site management."</p>
-                        <div class="technologies">
-                            <div class="tech">HTML</div>
-                            <div class="tech">Bootstrap</div>
-                            <div class="tech">Python</div>
-                            <div class="tech">Django</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project flex sm anim-bottom" style="align-items: flex-start;">
-                    <div class="project-image"><img src="assets/pomodoro-1.png" alt=""><img src="assets/pomodoro-2.png" alt=""></div>
-                    <div class="project-desc">
-                        <div class="project-title"><h2><a target="_blank" href="https://github.com/Shamim-Basha/rn-pomodoro-">Pomodoro Timer - Mobile App</a></h2></div>
-                        <p>Developed revolutionizing time management and productivity mobile app. This enables users to harness the Pomodoro Technique for heightened focus and task management, contributing to improved efficiency and goal attainment.</p>
-                        <div class="technologies">
-                            <div class="tech">React-Native</div>
-                            <div class="tech">Expo</div>
-                        </div>
-                    </div>
-                </div> -->
+                </div>-->
             </div>
         </section>
         <section id="contact" class="contact light">
