minor spelling mistake

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                     </div>
 
                     <div class="sec">
-                        <h2 class="anim-bottom">Databsse</h2>
+                        <h2 class="anim-bottom">Database</h2>
                         <ul>
                             <li class="anim-left">SQL</li>
                             <li class="anim-left">MongoDB</li>
