Google meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="bq-1C1DgueloEZCM1L0reh79BudNqpFzN_pTiM_8vkk" />
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="sm-logo.png" type="image/x-icon" >
     <script defer src="app.js"></script>
