Added awards section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script>history.scrollRestoration = "manual";</script>
     <title>Shamim Basha - Developer</title>
 </head>
 <body>
@@ -210,6 +211,36 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
                             <li class="anim-left">React-Native</li>
                             <li class="anim-left">Expo</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="awards" class="awards light">
+            <h2 class="anim-bottom">Awards</h2>
+            <div class="awardsContainer">
+                <div class="award flex sm anim-bottom" style="align-items: flex-start;">
+                    <div class="award-desc">
+                        <div class="award-title"><h2><a target="_blank" href="https://codefest.lk/algothon/">Algothon Codefest 2024 - 5th Place</a></h2></div>
+                        <p>Algothon 2025, organized under CODEFEST 2025 by the Faculty of Computing, SLIIT, is a thrilling national-level algorithmic programming competition designed to challenge the sharpest problem-solvers from universities across Sri Lanka. This contest will consist of two intense rounds, each testing participant's skills in logic, algorithms, data structures, and problem-solving under pressure.</p>
+                    </div>
+                </div>
+
+                <div class="award flex sm anim-bottom" style="align-items: flex-start;">
+                    <div class="award-desc">
+                        <div class="award-title"><h2><a target="_blank" href="https://ieeextreme.org/ieeextreme-18-0-ranking/">IEEEXtreme 18.0</a></h2></div>
+                        <p>
+                            🌍 Global Rank: 835<br> 
+                            🏆 Regional Rank: 484 <br>
+                            🇱🇰 Country Rank: 73 <br>
+                            🎓 University Rank (SLIIT): 3
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="award flex sm anim-bottom" style="align-items: flex-start;">
+                    <div class="award-desc">
+                        <div class="award-title"><h2><a target="_blank" href="https://ieeextreme.org/ieeextreme-18-0-ranking/">SLIITXtreme 3.0 - 2nd Runner Up</a></h2></div>
+                        <p>The IEEE Computer Society of Sri Lanka Institute of Information Technology (SLIIT), in collaboration with the Software Engineering Student Community (SESC) of SLIIT, organizes SLIITXtreme. This event aims to conduct a hackathon to introduce SLIIT undergraduates the IEEEXtreme Global Programming Competition.</p>
                     </div>
                 </div>
             </div>
