--- a/index.html
+++ b/index.html
@@ -217,11 +217,13 @@ m375 -1371 c0 -26 -154 -259 -249 -379 -233 -292 -550 -619 -666 -686 -57 -33
         </section>
         <section id="education" class="education dark">
             <h2 class="anim-bottom">Education</h2>
-            <div>Bsc (Hons) in Computer Science</div>
-            <p>Sri Lankan Institute of Information Technology (2024 - Present)</p>
-            <p style="text-decoration: underline; margin-top:1rem">Dean's List:</p>
-            <p>1st Year - 1st Semester</p></li>
-            <p>1st Year - 2nd Semester</p>
+            <div class="anim-bottom">
+                <div>Bsc (Hons) in Computer Science</div>
+                <p>Sri Lankan Institute of Information Technology (2024 - Present)</p>
+                <p style="text-decoration: underline; margin-top:1rem">Dean's List:</p>
+                <p>1st Year - 1st Semester</p></li>
+                <p>1st Year - 2nd Semester</p>
+            </div>
         </section>
         <section id="awards" class="awards light">
             <h2 class="anim-bottom">Awards</h2>
